--- a/src/AdminView.form
+++ b/src/AdminView.form
@@ -88,7 +88,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Welcome to student portal"/>
+        <Property name="text" type="java.lang.String" value="Welcome to admin portal"/>
       </Properties>
     </Component>
   </SubComponents>
