--- a/src/AdminShowStudents.form
+++ b/src/AdminShowStudents.form
@@ -76,23 +76,11 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="2">
-                <Column editable="false" title="Name" type="java.lang.String">
-                  <Data value="name1"/>
-                  <Data value="name2"/>
-                </Column>
-                <Column editable="false" title="Percentage" type="java.lang.Integer">
-                  <Data value="33"/>
-                  <Data value="44"/>
-                </Column>
-                <Column editable="true" title="ID" type="java.lang.Integer">
-                  <Data value="4"/>
-                  <Data value="7"/>
-                </Column>
-                <Column editable="false" title="recruited" type="java.lang.Boolean">
-                  <Data value="true"/>
-                  <Data value="null"/>
-                </Column>
+              <Table columnCount="4" rowCount="0">
+                <Column editable="false" title="Name" type="java.lang.String"/>
+                <Column editable="false" title="Percentage" type="java.lang.Integer"/>
+                <Column editable="true" title="ID" type="java.lang.Integer"/>
+                <Column editable="false" title="recruited" type="java.lang.Boolean"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
