--- a/src/AdminShowRecruiters.form
+++ b/src/AdminShowRecruiters.form
@@ -79,23 +79,11 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="2">
-                <Column editable="false" title="ID" type="java.lang.Integer">
-                  <Data value="2"/>
-                  <Data value="1"/>
-                </Column>
-                <Column editable="false" title="RecruiterName" type="java.lang.String">
-                  <Data value="name1"/>
-                  <Data value="name2"/>
-                </Column>
-                <Column editable="false" title="Company Name" type="java.lang.String">
-                  <Data value="ABC"/>
-                  <Data value="DEF"/>
-                </Column>
-                <Column editable="false" title="Min requirement" type="java.lang.Integer">
-                  <Data value="33"/>
-                  <Data value="44"/>
-                </Column>
+              <Table columnCount="4" rowCount="0">
+                <Column editable="false" title="ID" type="java.lang.Integer"/>
+                <Column editable="false" title="RecruiterName" type="java.lang.String"/>
+                <Column editable="false" title="Company Name" type="java.lang.String"/>
+                <Column editable="false" title="Min requirement" type="java.lang.Integer"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
