--- a/src/AdminShowStudents.form
+++ b/src/AdminShowStudents.form
@@ -77,9 +77,9 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
+                <Column editable="false" title="ID" type="java.lang.String"/>
                 <Column editable="false" title="Name" type="java.lang.String"/>
                 <Column editable="false" title="Percentage" type="java.lang.Integer"/>
-                <Column editable="true" title="ID" type="java.lang.Integer"/>
                 <Column editable="false" title="recruited" type="java.lang.Boolean"/>
               </Table>
             </Property>
